--- a/src/Components/features/Features.css
+++ b/src/Components/features/Features.css
@@ -1,13 +1,13 @@
 .features {
     display: flex;
     width: 100%;
+    justify-content: space-between;
 }
 
 .featureItem {
     width: 260px;
     height: 160px;
     display: flex;
-    margin: 0px 20px;
     flex-direction: column;
     box-shadow: 0px 0px 15px -10px rgba(0, 0, 0, 1);
     justify-content: center;
