--- a/src/Pages/Users/Users.css
+++ b/src/Pages/Users/Users.css
@@ -27,11 +27,15 @@
 .userListEdit {
     border: none;
     border-radius: 10px;
-    padding: 5px 10px;
+    padding: 5px 10px !important;
     background-color: #3bb077;
     color: white;
     cursor: pointer;
     margin-right: 20px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
 }
 
 .userListDelete {
